--- a/kubernetes/manifest.yml
+++ b/kubernetes/manifest.yml
@@ -33,3 +33,24 @@ spec:
     targetPort: 3000
     nodePort: 30001
 
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: starbucks-ingress
+  namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - host: starbucks.local
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: starbucks-service
+            port:
+              number: 80
